footer and font sizes and zoom issue on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,6 +26,7 @@ body{
     width: 100vw;
     overflow-x: hidden !important;
 }
+
 /* ===================== NAVBAR ===================== */
 #active{
     color: var(--meadium-sea-green) !important;
@@ -86,6 +87,10 @@ body{
                     width: 150px;
                     height: 70px;
                 }
+            }
+
+            .nav-item .nav-link{
+                font-size: 1rem;
             }
         }
 
@@ -192,14 +197,16 @@ body{
     }
 
     .navbar-nav {
+        padding: 0;
         .nav-item {
             width: 100%;
-
+            padding: 0;
             .nav-link {
                 display: block;
                 width: 90%;
                 position: relative;
-                font-size: 1.2rem;
+                color: rgba(0, 0, 0, 0.8);
+                font-size: 1rem;
                 font-weight: 500;
                 transition: all 0.2s ease;
 
@@ -436,8 +443,7 @@ body{
                 a.icon {
                     color: rgba(0, 0, 0, 0.8);
                     text-decoration: none;
-                    text-transform: capitalize;
-                    font-size: 1.2rem;
+                    font-size: 1.1rem;
                     display: flex;
                     align-items: center;
                     margin: 0;
@@ -445,7 +451,7 @@ body{
 
                     span {
                         font-variation-settings: "FILL" 1, "wght" 600, "GRAD" 0, "opsz" 48;
-                        font-size: 1.2rem;
+                        font-size: 1rem !important;
                         color: var(--meadium-sea-green) !important;
                         margin-right: 10px;
                         margin: 0;
@@ -463,7 +469,7 @@ body{
 
                 .title {
                     width: 100%;
-                    font-size: 1.4rem;
+                    font-size: 1.3rem;
                     color: rgba(0, 0, 0, 0.8);
                     padding: 0;
                     position: relative;
@@ -492,7 +498,7 @@ body{
                     .list-link {
                         text-decoration: none;
                         text-transform: capitalize;
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                         color: rgba(0, 0, 0, 0.8);
                         position: relative;
                         padding: 5px 0;
@@ -554,7 +560,7 @@ body{
                     }
                     .btn {
                         width: 29%;
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                         display: inline-block;
                         padding: 13px 0;
                         border-radius: 4px;
